# delaunaylib

./: CMakeLists.txt  README.md
src/delaunay/: CMakeLists.txt
src/delaunay/include/: delaunay.h  delaunay.hpp  edge.hpp  point.hpp  quad_edge.hpp
src/delaunay/include/delaunay/: delaunay.hpp  edge_state.hpp  gsl.hpp  point.hpp  quad_edge.hpp  types.hpp
src/delaunay/src/: delaunay.cpp  edge.cpp  point.cpp  quad_edge.cpp  quad_edge.hpp  triangulator.cpp  triangulator.hpp
src/delaunay/tests/: CMakeLists.txt
src/delaunay/tests/src/: test_geometric_primitives.cpp
src/example/: CMakeLists.txt
src/example/src/: main.cpp
